--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "concurrently": "^5.3.0",
+    "node-sass": "^4.14.1",
     "overmind": "^25.0.2",
     "overmind-devtools": "^26.0.2",
     "overmind-react": "^26.0.2",
