--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "concurrently": "^5.3.0",
-    "node-sass": "^4.14.1",
-    "overmind": "^25.0.2",
-    "overmind-devtools": "^26.0.2",
-    "overmind-react": "^26.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-select": "^3.1.0",
-    "i18next": "^19.4.4",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "concurrently": "^8.2.1",
+    "i18next": "^23.4.6",
     "i18next-xhr-backend": "^3.2.2",
-    "react-i18next": "^11.4.0"
+    "node-sass": "^9.0.0",
+    "overmind": "^28.0.3",
+    "overmind-devtools": "^29.0.3",
+    "overmind-react": "^29.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.0",
+    "react-select": "^5.7.4"
   },
   "scripts": {
-    "start": "concurrently \"overmind-devtools\" \"react-scripts start\"",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"overmind-devtools\" \"vite\"",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +39,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
+    "eslint": "^8.48.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "sass": "^1.66.1",
+    "vite": "^4.4.9"
   }
 }
