--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
-    "react-select": "^5.7.4"
+    "react-select": "^5.7.4",
+    "zustand": "^4.4.1"
   },
   "scripts": {
     "start": "concurrently \"overmind-devtools\" \"vite\"",
